hw2/seal.output
Rules useless in parser due to conflicts

   78 expr_: %empty


State 23 conflicts: 1 shift/reduce
State 29 conflicts: 1 shift/reduce
State 46 conflicts: 1 reduce/reduce
State 57 conflicts: 1 shift/reduce
State 58 conflicts: 1 shift/reduce
State 91 conflicts: 1 shift/reduce
State 95 conflicts: 1 shift/reduce
State 122 conflicts: 1 shift/reduce
State 124 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl
    3          | decl_list decl

    4 decl: variableDecl
    5     | callDecl

    6 variableDecl_list: variableDecl
    7                  | variableDecl_list variableDecl
    8                  | %empty

    9 variableDecl: VAR variable ';'

   10 variable: OBJECTID TYPEID

   11 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID stmtBlock

   12 variable_list: non_empty_variable_list
   13              | %empty

   14 non_empty_variable_list: variable
   15                        | non_empty_variable_list ',' variable

   16 stmtBlock: '{' variableDecl_list stmts '}'

   17 stmts: stmt
   18      | stmt stmts
   19      | %empty

   20 stmt: expr ';'
   21     | ifStmt
   22     | whileStmt
   23     | forStmt
   24     | breakStmt
   25     | continueStmt
   26     | returnStmt
   27     | stmtBlock
   28     | ';'

   29 ifStmt: IF expr stmtBlock
   30       | IF expr stmtBlock ELSE stmtBlock

   31 whileStmt: WHILE expr stmtBlock

   32 forStmt: FOR expr ';' expr ';' expr stmtBlock
   33        | FOR expr_ ';' expr_ ';' stmtBlock
   34        | FOR expr_ ';' ';' expr_ stmtBlock
   35        | FOR ';' expr_ ';' expr_ stmtBlock
   36        | FOR expr_ ';' ';' stmtBlock
   37        | FOR ';' expr_ ';' stmtBlock
   38        | FOR ';' ';' expr_ stmtBlock
   39        | FOR ';' ';' stmtBlock

   40 returnStmt: RETURN expr ';'
   41           | RETURN ';'

   42 continueStmt: CONTINUE ';'

   43 breakStmt: BREAK ';'

   44 expr: OBJECTID '=' expr
   45     | CONST_INT
   46     | CONST_FLOAT
   47     | CONST_STRING
   48     | CONST_BOOL
   49     | call
   50     | '(' expr ')'
   51     | OBJECTID
   52     | expr '+' expr
   53     | expr '-' expr
   54     | expr '*' expr
   55     | expr '/' expr
   56     | expr '%' expr
   57     | '-' expr
   58     | expr '<' expr
   59     | expr LE expr
   60     | expr EQUAL expr
   61     | expr NE expr
   62     | expr GE expr
   63     | expr '>' expr
   64     | expr AND expr
   65     | expr OR expr
   66     | expr '^' expr
   67     | '!' expr
   68     | '~' expr
   69     | expr '&' expr
   70     | expr '|' expr

   71 call: OBJECTID '(' actuals ')'

   72 actual: expr

   73 actuals: non_empty_actuals
   74        | %empty

   75 non_empty_actuals: actual
   76                  | non_empty_actuals ',' actual

   77 expr_: expr
   78      | %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 67
'%' (37) 56
'&' (38) 69
'(' (40) 11 50 71
')' (41) 11 50 71
'*' (42) 54
'+' (43) 52
',' (44) 15 76
'-' (45) 53 57
'/' (47) 55
';' (59) 9 20 28 32 33 34 35 36 37 38 39 40 41 42 43
'<' (60) 58
'=' (61) 44
'>' (62) 63
'^' (94) 66
'{' (123) 16
'|' (124) 70
'}' (125) 16
'~' (126) 68
error (256)
IF (258) 29 30
ELSE (260) 30
WHILE (261) 31
FOR (262) 32 33 34 35 36 37 38 39
BREAK (263) 43
CONTINUE (264) 42
FUNC (265) 11
RETURN (266) 40 41
CONST_BOOL (267) 48
CONST_INT (268) 45
CONST_STRING (269) 47
CONST_FLOAT (270) 46
VAR (271) 9
AND (274) 64
OR (275) 65
EQUAL (276) 60
NE (277) 61
GE (278) 62
LE (279) 59
OBJECTID (284) 10 11 44 51 71
TYPEID (285) 10 11
UMINUS (287)


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
program (45)
    on left: 1, on right: 0
decl_list (46)
    on left: 2 3, on right: 1 3
decl (47)
    on left: 4 5, on right: 2 3
variableDecl_list (48)
    on left: 6 7 8, on right: 7 16
variableDecl (49)
    on left: 9, on right: 4 6 7
variable (50)
    on left: 10, on right: 9 14 15
callDecl (51)
    on left: 11, on right: 5
variable_list (52)
    on left: 12 13, on right: 11
non_empty_variable_list (53)
    on left: 14 15, on right: 12 15
stmtBlock (54)
    on left: 16, on right: 11 27 29 30 31 32 33 34 35 36 37 38 39
stmts (55)
    on left: 17 18 19, on right: 16 18
stmt (56)
    on left: 20 21 22 23 24 25 26 27 28, on right: 17 18
ifStmt (57)
    on left: 29 30, on right: 21
whileStmt (58)
    on left: 31, on right: 22
forStmt (59)
    on left: 32 33 34 35 36 37 38 39, on right: 23
returnStmt (60)
    on left: 40 41, on right: 26
continueStmt (61)
    on left: 42, on right: 25
breakStmt (62)
    on left: 43, on right: 24
expr (63)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 63 64 65 66 67 68 69 70, on right: 20 29 30 31 32 40 44 50 52
    53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 72 77
call (64)
    on left: 71, on right: 49
actual (65)
    on left: 72, on right: 75 76
actuals (66)
    on left: 73 74, on right: 71
non_empty_actuals (67)
    on left: 75 76, on right: 73 76
expr_ (68)
    on left: 77 78, on right: 33 34 35 36 37 38


State 0

    0 $accept: . program $end

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    program       go to state 3
    decl_list     go to state 4
    decl          go to state 5
    variableDecl  go to state 6
    callDecl      go to state 7


State 1

   11 callDecl: FUNC . OBJECTID '(' variable_list ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 8


State 2

    9 variableDecl: VAR . variable ';'

    OBJECTID  shift, and go to state 9

    variable  go to state 10


State 3

    0 $accept: program . $end

    $end  shift, and go to state 11


State 4

    1 program: decl_list .
    3 decl_list: decl_list . decl

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    $default  reduce using rule 1 (program)

    decl          go to state 12
    variableDecl  go to state 6
    callDecl      go to state 7


State 5

    2 decl_list: decl .

    $default  reduce using rule 2 (decl_list)


State 6

    4 decl: variableDecl .

    $default  reduce using rule 4 (decl)


State 7

    5 decl: callDecl .

    $default  reduce using rule 5 (decl)


State 8

   11 callDecl: FUNC OBJECTID . '(' variable_list ')' TYPEID stmtBlock

    '('  shift, and go to state 13


State 9

   10 variable: OBJECTID . TYPEID

    TYPEID  shift, and go to state 14


State 10

    9 variableDecl: VAR variable . ';'

    ';'  shift, and go to state 15


State 11

    0 $accept: program $end .

    $default  accept


State 12

    3 decl_list: decl_list decl .

    $default  reduce using rule 3 (decl_list)


State 13

   11 callDecl: FUNC OBJECTID '(' . variable_list ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 9

    $default  reduce using rule 13 (variable_list)

    variable                 go to state 16
    variable_list            go to state 17
    non_empty_variable_list  go to state 18


State 14

   10 variable: OBJECTID TYPEID .

    $default  reduce using rule 10 (variable)


State 15

    9 variableDecl: VAR variable ';' .

    $default  reduce using rule 9 (variableDecl)


State 16

   14 non_empty_variable_list: variable .

    $default  reduce using rule 14 (non_empty_variable_list)


State 17

   11 callDecl: FUNC OBJECTID '(' variable_list . ')' TYPEID stmtBlock

    ')'  shift, and go to state 19


State 18

   12 variable_list: non_empty_variable_list .
   15 non_empty_variable_list: non_empty_variable_list . ',' variable

    ','  shift, and go to state 20

    $default  reduce using rule 12 (variable_list)


State 19

   11 callDecl: FUNC OBJECTID '(' variable_list ')' . TYPEID stmtBlock

    TYPEID  shift, and go to state 21


State 20

   15 non_empty_variable_list: non_empty_variable_list ',' . variable

    OBJECTID  shift, and go to state 9

    variable  go to state 22


State 21

   11 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID . stmtBlock

    '{'  shift, and go to state 23

    stmtBlock  go to state 24


State 22

   15 non_empty_variable_list: non_empty_variable_list ',' variable .

    $default  reduce using rule 15 (non_empty_variable_list)


State 23

   16 stmtBlock: '{' . variableDecl_list stmts '}'

    VAR  shift, and go to state 2

    VAR       [reduce using rule 8 (variableDecl_list)]
    $default  reduce using rule 8 (variableDecl_list)

    variableDecl_list  go to state 25
    variableDecl       go to state 26


State 24

   11 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID stmtBlock .

    $default  reduce using rule 11 (callDecl)


State 25

    7 variableDecl_list: variableDecl_list . variableDecl
   16 stmtBlock: '{' variableDecl_list . stmts '}'

    IF            shift, and go to state 27
    WHILE         shift, and go to state 28
    FOR           shift, and go to state 29
    BREAK         shift, and go to state 30
    CONTINUE      shift, and go to state 31
    RETURN        shift, and go to state 32
    VAR           shift, and go to state 2
    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    ';'           shift, and go to state 41
    '('           shift, and go to state 42
    '{'           shift, and go to state 23

    $default  reduce using rule 19 (stmts)

    variableDecl  go to state 43
    stmtBlock     go to state 44
    stmts         go to state 45
    stmt          go to state 46
    ifStmt        go to state 47
    whileStmt     go to state 48
    forStmt       go to state 49
    returnStmt    go to state 50
    continueStmt  go to state 51
    breakStmt     go to state 52
    expr          go to state 53
    call          go to state 54


State 26

    6 variableDecl_list: variableDecl .

    $default  reduce using rule 6 (variableDecl_list)


State 27

   29 ifStmt: IF . expr stmtBlock
   30       | IF . expr stmtBlock ELSE stmtBlock

    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    '('           shift, and go to state 42

    expr  go to state 55
    call  go to state 54


State 28

   31 whileStmt: WHILE . expr stmtBlock

    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    '('           shift, and go to state 42

    expr  go to state 56
    call  go to state 54


State 29

   32 forStmt: FOR . expr ';' expr ';' expr stmtBlock
   33        | FOR . expr_ ';' expr_ ';' stmtBlock
   34        | FOR . expr_ ';' ';' expr_ stmtBlock
   35        | FOR . ';' expr_ ';' expr_ stmtBlock
   36        | FOR . expr_ ';' ';' stmtBlock
   37        | FOR . ';' expr_ ';' stmtBlock
   38        | FOR . ';' ';' expr_ stmtBlock
   39        | FOR . ';' ';' stmtBlock

    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    ';'           shift, and go to state 57
    '('           shift, and go to state 42

    ';'  [reduce using rule 78 (expr_)]

    expr   go to state 58
    call   go to state 54
    expr_  go to state 59


State 30

   43 breakStmt: BREAK . ';'

    ';'  shift, and go to state 60


State 31

   42 continueStmt: CONTINUE . ';'

    ';'  shift, and go to state 61


State 32

   40 returnStmt: RETURN . expr ';'
   41           | RETURN . ';'

    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    ';'           shift, and go to state 62
    '('           shift, and go to state 42

    expr  go to state 63
    call  go to state 54


State 33

   48 expr: CONST_BOOL .

    $default  reduce using rule 48 (expr)


State 34

   45 expr: CONST_INT .

    $default  reduce using rule 45 (expr)


State 35

   47 expr: CONST_STRING .

    $default  reduce using rule 47 (expr)


State 36

   46 expr: CONST_FLOAT .

    $default  reduce using rule 46 (expr)


State 37

   44 expr: OBJECTID . '=' expr
   51     | OBJECTID .
   71 call: OBJECTID . '(' actuals ')'

    '='  shift, and go to state 64
    '('  shift, and go to state 65

    $default  reduce using rule 51 (expr)


State 38

   57 expr: '-' . expr

    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    '('           shift, and go to state 42

    expr  go to state 66
    call  go to state 54


State 39

   67 expr: '!' . expr

    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    '('           shift, and go to state 42

    expr  go to state 67
    call  go to state 54


State 40

   68 expr: '~' . expr

    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    '('           shift, and go to state 42

    expr  go to state 68
    call  go to state 54


State 41

   28 stmt: ';' .

    $default  reduce using rule 28 (stmt)


State 42

   50 expr: '(' . expr ')'

    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    '('           shift, and go to state 42

    expr  go to state 69
    call  go to state 54


State 43

    7 variableDecl_list: variableDecl_list variableDecl .

    $default  reduce using rule 7 (variableDecl_list)


State 44

   27 stmt: stmtBlock .

    $default  reduce using rule 27 (stmt)


State 45

   16 stmtBlock: '{' variableDecl_list stmts . '}'

    '}'  shift, and go to state 70


State 46

   17 stmts: stmt .
   18      | stmt . stmts

    IF            shift, and go to state 27
    WHILE         shift, and go to state 28
    FOR           shift, and go to state 29
    BREAK         shift, and go to state 30
    CONTINUE      shift, and go to state 31
    RETURN        shift, and go to state 32
    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    ';'           shift, and go to state 41
    '('           shift, and go to state 42
    '{'           shift, and go to state 23

    '}'       reduce using rule 17 (stmts)
    '}'       [reduce using rule 19 (stmts)]
    $default  reduce using rule 17 (stmts)

    stmtBlock     go to state 44
    stmts         go to state 71
    stmt          go to state 46
    ifStmt        go to state 47
    whileStmt     go to state 48
    forStmt       go to state 49
    returnStmt    go to state 50
    continueStmt  go to state 51
    breakStmt     go to state 52
    expr          go to state 53
    call          go to state 54


State 47

   21 stmt: ifStmt .

    $default  reduce using rule 21 (stmt)


State 48

   22 stmt: whileStmt .

    $default  reduce using rule 22 (stmt)


State 49

   23 stmt: forStmt .

    $default  reduce using rule 23 (stmt)


State 50

   26 stmt: returnStmt .

    $default  reduce using rule 26 (stmt)


State 51

   25 stmt: continueStmt .

    $default  reduce using rule 25 (stmt)


State 52

   24 stmt: breakStmt .

    $default  reduce using rule 24 (stmt)


State 53

   20 stmt: expr . ';'
   52 expr: expr . '+' expr
   53     | expr . '-' expr
   54     | expr . '*' expr
   55     | expr . '/' expr
   56     | expr . '%' expr
   58     | expr . '<' expr
   59     | expr . LE expr
   60     | expr . EQUAL expr
   61     | expr . NE expr
   62     | expr . GE expr
   63     | expr . '>' expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . '^' expr
   69     | expr . '&' expr
   70     | expr . '|' expr

    AND    shift, and go to state 72
    OR     shift, and go to state 73
    EQUAL  shift, and go to state 74
    NE     shift, and go to state 75
    GE     shift, and go to state 76
    LE     shift, and go to state 77
    '<'    shift, and go to state 78
    '>'    shift, and go to state 79
    '+'    shift, and go to state 80
    '-'    shift, and go to state 81
    '*'    shift, and go to state 82
    '/'    shift, and go to state 83
    '%'    shift, and go to state 84
    '&'    shift, and go to state 85
    '|'    shift, and go to state 86
    '^'    shift, and go to state 87
    ';'    shift, and go to state 88


State 54

   49 expr: call .

    $default  reduce using rule 49 (expr)


State 55

   29 ifStmt: IF expr . stmtBlock
   30       | IF expr . stmtBlock ELSE stmtBlock
   52 expr: expr . '+' expr
   53     | expr . '-' expr
   54     | expr . '*' expr
   55     | expr . '/' expr
   56     | expr . '%' expr
   58     | expr . '<' expr
   59     | expr . LE expr
   60     | expr . EQUAL expr
   61     | expr . NE expr
   62     | expr . GE expr
   63     | expr . '>' expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . '^' expr
   69     | expr . '&' expr
   70     | expr . '|' expr

    AND    shift, and go to state 72
    OR     shift, and go to state 73
    EQUAL  shift, and go to state 74
    NE     shift, and go to state 75
    GE     shift, and go to state 76
    LE     shift, and go to state 77
    '<'    shift, and go to state 78
    '>'    shift, and go to state 79
    '+'    shift, and go to state 80
    '-'    shift, and go to state 81
    '*'    shift, and go to state 82
    '/'    shift, and go to state 83
    '%'    shift, and go to state 84
    '&'    shift, and go to state 85
    '|'    shift, and go to state 86
    '^'    shift, and go to state 87
    '{'    shift, and go to state 23

    stmtBlock  go to state 89


State 56

   31 whileStmt: WHILE expr . stmtBlock
   52 expr: expr . '+' expr
   53     | expr . '-' expr
   54     | expr . '*' expr
   55     | expr . '/' expr
   56     | expr . '%' expr
   58     | expr . '<' expr
   59     | expr . LE expr
   60     | expr . EQUAL expr
   61     | expr . NE expr
   62     | expr . GE expr
   63     | expr . '>' expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . '^' expr
   69     | expr . '&' expr
   70     | expr . '|' expr

    AND    shift, and go to state 72
    OR     shift, and go to state 73
    EQUAL  shift, and go to state 74
    NE     shift, and go to state 75
    GE     shift, and go to state 76
    LE     shift, and go to state 77
    '<'    shift, and go to state 78
    '>'    shift, and go to state 79
    '+'    shift, and go to state 80
    '-'    shift, and go to state 81
    '*'    shift, and go to state 82
    '/'    shift, and go to state 83
    '%'    shift, and go to state 84
    '&'    shift, and go to state 85
    '|'    shift, and go to state 86
    '^'    shift, and go to state 87
    '{'    shift, and go to state 23

    stmtBlock  go to state 90


State 57

   35 forStmt: FOR ';' . expr_ ';' expr_ stmtBlock
   37        | FOR ';' . expr_ ';' stmtBlock
   38        | FOR ';' . ';' expr_ stmtBlock
   39        | FOR ';' . ';' stmtBlock
